--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   release:
     name: Create Release
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       # Checkout repository
@@ -16,11 +16,15 @@ jobs:
         uses: actions/checkout@v4
 
       # Install dependencies
-      - name: Install dependencies
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install scons
         run: |
-          sudo apt-get update
-          sudo apt-get install -y scons
           python -m pip install --upgrade pip
+          pip install scons
 
       # Build the addon file using scons
       - name: Build Addon
@@ -48,6 +52,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./addon/dist/*.nvda-addon  # Path file addon kamu setelah build
+          asset_path: ./addon/*.nvda-addon  # Path file addon kamu setelah build
           asset_name: MyCalculator-1.0.0.nvda-addon
           asset_content_type: application/octet-stream  # Tipe konten untuk file .nvda-addon
