--- a/addon/manifest.ini
+++ b/addon/manifest.ini
@@ -1,6 +1,6 @@
 name = My Calculator
 summary = "Calculator"
-description = """This is a calculator for NVDA addon with better user experience """
+description = """calculator with multiple calculation methods and better user experience"""
 author = "AndhiMardianto<anditoinfo@gmail.com>"
 url = https://github.com/AndhiMardianto/MyCalculator
 version = 1.0.0
