--- a/addon/SConstruct
+++ b/addon/SConstruct
@@ -12,6 +12,8 @@ AddonFiles = [
     "buildVars.py",
     "globalPlugins/myCalculator/__init__.py",
     "globalPlugins/myCalculator/help.py",
+    "globalPlugins/myCalculator/conversion.py",
+    "globalPlugins/myCalculator/scientific.py",
     "doc/en/readme.html",
     "doc/en/readme.md",
     "locale/ar/LC_MESSAGES/nvda.po",   
