new features scientific and conversion

--- a/addon/SConstruct
+++ b/addon/SConstruct
@@ -9,25 +9,45 @@ import buildVars
 # Tentukan lokasi file yang akan dikemas
 AddonFiles = [
     "manifest.ini",
-    "buildVars.py",
     "globalPlugins/myCalculator/__init__.py",
     "globalPlugins/myCalculator/help.py",
     "globalPlugins/myCalculator/conversion.py",
     "globalPlugins/myCalculator/scientific.py",
     "doc/en/readme.html",
     "doc/en/readme.md",
+    "doc/it/readme.md",
+    "doc/uk/readme.md",
+    "doc/uk/readme.html",
+    "locale/af/LC_MESSAGES/nvda.po",   
+    "locale/af/LC_MESSAGES/nvda.mo",   
     "locale/ar/LC_MESSAGES/nvda.po",   
     "locale/ar/LC_MESSAGES/nvda.mo",   
+        "locale/de/LC_MESSAGES/nvda.po",   
+    "locale/de/LC_MESSAGES/nvda.mo",   
     "locale/es/LC_MESSAGES/nvda.po",   
     "locale/es/LC_MESSAGES/nvda.mo",   
+        "locale/fr/LC_MESSAGES/nvda.po",   
+    "locale/fr/LC_MESSAGES/nvda.mo",   
     "locale/hi/LC_MESSAGES/nvda.po",   
     "locale/hi/LC_MESSAGES/nvda.mo",   
     "locale/id/LC_MESSAGES/nvda.po",   
     "locale/id/LC_MESSAGES/nvda.mo",   
+        "locale/it/LC_MESSAGES/nvda.po",   
+    "locale/it/LC_MESSAGES/nvda.mo",   
     "locale/ja/LC_MESSAGES/nvda.po",   
     "locale/ja/LC_MESSAGES/nvda.mo",   
+        "locale/ko/LC_MESSAGES/nvda.po",   
+    "locale/ko/LC_MESSAGES/nvda.mo",   
+
     "locale/pt/LC_MESSAGES/nvda.po",   
     "locale/pt/LC_MESSAGES/nvda.mo",   
+        "locale/ru/LC_MESSAGES/nvda.po",   
+    "locale/ru/LC_MESSAGES/nvda.mo",   
+    "locale/tr/LC_MESSAGES/nvda.po",   
+    "locale/tr/LC_MESSAGES/nvda.mo",   
+
+        "locale/uk/LC_MESSAGES/nvda.po",   
+    "locale/uk/LC_MESSAGES/nvda.mo",   
     "locale/ur/LC_MESSAGES/nvda.mo",   
     "locale/ur/LC_MESSAGES/nvda.po",   
     "locale/zh/LC_MESSAGES/nvda.po",   
