--- a/addon/manifest.ini
+++ b/addon/manifest.ini
@@ -1,6 +1,6 @@
 name = My Calculator
 summary = "Calculator"
-description = """calculator with multiple calculation methods and better user experience"""
+description = """calculator with multiple calculation methods, scientific, conversion and more  and also better user experience"""
 author = "AndhiMardianto<anditoinfo@gmail.com>"
 url = https://github.com/AndhiMardianto/MyCalculator
 version = 2.0.0
