--- a/addon/manifest.ini
+++ b/addon/manifest.ini
@@ -1,9 +1,9 @@
-name = My Calculator
+name = myCalculator
 summary = "Calculator"
 description = """calculator with multiple calculation methods, scientific, conversion and more  and also better user experience"""
 author = "AndhiMardianto<anditoinfo@gmail.com>"
 url = https://github.com/AndhiMardianto/MyCalculator
-version = 2.2.0
+version = 2.2.1
 docFileName = readme.html
 minimumNVDAVersion = 2023.3
 lastTestedNVDAVersion = 2025.1
